updated screens to controlled screens